data/derived/comb/progs/unify/prog6933.ml.out
Characters 89-95:
  wwhile (funt b, b);;
          ^^^^^^
Error: This expression has type int * 'a
       but an expression was expected of type 'b -> 'b * bool
